# gitsearchdigest

./: LICENSE  README.org  pyproject.toml
gitsearchdigest/: cli.py
