[tool.poetry]
name = "gitsearchdigest"
version = "0.1.0"
description = "Search git repository for the last appearance of an exact file"
authors = ["Nikolaos Chatzikonstantinou <nchatz314@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gitsearchdigest = "gitsearchdigest.cli:main"
